--- a/pages/cart/cart.html
+++ b/pages/cart/cart.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="cart.css" />
+    <link rel="stylesheet" href="../../css/cart.css" />
     <title>Document</title>
   </head>
   <body>
@@ -12,8 +12,8 @@
         <a href="/index.html"> <h1>FLIPKART</h1></a>
       </div>
       <div class="cart-button">
-        <a href="/cart.html"
-          ><img src="images/cart.svg" alt="" />
+        <a href=""
+          ><img src="../../images/cart.svg" alt="" />
           <div class="cart-quantity" id="cart-quantity">0</div></a
         >
       </div>
@@ -36,6 +36,6 @@
         </div>
       </div>
     </div>
-    <script src="cart.js"></script>
+    <script src="cart.js" type="module"></script>
   </body>
 </html>
