--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <script
       src="https://kit.fontawesome.com/54d4166140.js"
       crossorigin="anonymous"
@@ -17,7 +17,7 @@
         <a href="/index.html"> <h1>FLIPKART</h1></a>
       </div>
       <div class="cart-button">
-        <a href="/cart.html"
+        <a href="/pages/cart/cart.html"
           ><img src="images/cart.svg" alt="" />
           <div class="cart-quantity" id="cart-quantity">0</div></a
         >
@@ -25,6 +25,6 @@
     </section>
 
     <div id="product-container"></div>
-    <script src="index.js"></script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
